Bitmonero

Release notes 0.8.8

- JSON RPC v2.0 compatibility
- JSON RPC over TCP added- Further optimizations
- Fixed a bug with checkpoints behavior
- UI improvements for daemon
- Fixed COIN value (10^12)
- Raised minimum fee to (1/2) * (10^10)

Release notes 0.8.7

- Slow hash optimizations

Release notes 0.8.6

- Simplwallet can set extra for transfers
- Improvements in JSON RPC for wallet
- UX improvements in simplewallet
- Win32 compilation
- Mac OSX compilation

Release notes 0.8.5

- Port mapping for daemon using UPnP
- Improvements for daemon JSON RPC API

Release notes 0.8.4

- Formalization of high level API
- Improvements for wallet JSON RPC API

Release notes 0.8.3

- JSON RPC for wallet
- Fixed bug with blockchain storing
- Fixed bug with correct display of transfer's change 
- Bug fix in simple wallet

Release notes 0.8.2

- Now wallet is still working when daemon stores blockchain and can't serve clients
- No-console option for a daemon
- Fixed problem with network synchronization
- Major bug fix in simple wallet